--- a/sportsio/templates/user_side/add_address.html
+++ b/sportsio/templates/user_side/add_address.html
@@ -9,7 +9,7 @@
     <div class="form-row">
       <div class="col-md-4 mb-3">
         <label for="validationTooltip01">First name</label>
-        <input type="text" class="form-control" id="validationTooltip01" placeholder="First name" value="Mark" required>
+        <input type="text" class="form-control" id="validationTooltip01" name="street" placeholder="First name" value="Mark" required>
         <div class="valid-tooltip">
           Looks good!
         </div>
