userside product view made changes

--- a/sportsio/templates/user_side/product-view1.html
+++ b/sportsio/templates/user_side/product-view1.html
@@ -189,7 +189,7 @@
                                         <span class="color-name">{{ variant_product.color }}</span>
                                     </div>
                                     <div class="variant-details">
-                                        <span class="variant-size">{{ variant_product.ram }}</span> RAM <br>
+                                        <span class="variant-size">{{ variant_product.ram }}</span> RAM and storage <br>
                                         <span class="variant-storage">{{ variant_product.internal_storage }}</span> Storage
                                     </div>
                                 </div>
