--- a/sportsio/templates/user_side/user_profile.html
+++ b/sportsio/templates/user_side/user_profile.html
@@ -7,6 +7,9 @@
     padding: 10px; /* Add padding for spacing */
     margin-bottom: 10px; /* Add margin for spacing */
 }
+.address-box btn{
+    color: white;
+}
 
 .address-box label {
     display: inline-block; /* Make label inline */
@@ -106,11 +109,16 @@
                                 <div class="row">
                                     <div class="col">
                                         <h4 class="small-title">SHIPPING ADDRESS</h4>
+                                        {% for addy in address %}
                                         <div class="address-box">
-                                            <input type="radio" id="address1" name="address" value="1234 Heaven Stress, Beverly Hill OldYork UnitedState of Lorem">
-                                            <label for="address1">1234 Heaven Stress, Beverly Hill OldYork UnitedState of Lorem</label>
+                                            <label for="address{{ addy.id }}">{{ addy.address }},{{ addy.house_name }},{{ addy.street }},{{ addy.city }},{{ addy.zipcode }},{{ addy.state }}</label>
+                                            <button class="btn btn-warning btn-sm"><a href="{% url "edit_address" addy.id %}">Edit</a> </button>
+                                            <button class="btn btn-danger btn-sm"><a href="#">Delete</a> </button>
+
                                         </div>
-                                        <button class="btn btn-warning btn-sm"><a href={% url "add_address"%}>Manage</a> </button>
+                                    {% endfor %}                                    
+                                        <button class="btn btn-warning btn-sm"><a href={% url "add_address" %}>Add</a> </button>
+
                                     </div>
                                     
                                 </div>
@@ -161,4 +169,5 @@
     </div>
     <!-- Uren's Account Page Area End Here -->
 </main>
+    
 {% endblock %}
