User profile manage address done

--- a/sportsio/templates/user_side/add_address.html
+++ b/sportsio/templates/user_side/add_address.html
@@ -48,6 +48,7 @@
           </div>
         </div>
         <button class="btn btn-sm btn-primary" type="submit">Submit form</button>
+        <button type="reset" class="btn btn-sm btn-primary"><a style="color:white;" href="{% url 'user_profile:user_profile' %}">Back</a></button>
       </form>
     </div>
     
