--- a/sportsio/templates/user_side/base.html
+++ b/sportsio/templates/user_side/base.html
@@ -61,18 +61,29 @@
                                 </a>
                             </div>
                         </div>
+
+                        <!-- Search Div Start Here -->
                         <div class="col-xl-5 col-lg-6 d-none d-lg-block">
                             <div class="hm-form_area">
-                                <form action="#" class="hm-searchbox">
+
+                                <!-- Search Form Start Here -->
+
+                                <form action="#" method="POST" class="hm-searchbox">
+                                    {% csrf_token %}
                                     <select class="nice-select select-search-category">
                                         <option value="0">All Categories</option>
                                     </select>
-                                    <input type="text" placeholder="Enter your search key ...">
+                                    <input type="text" name="searched" placeholder="Enter your search key ..." value="{{ query }}">
                                     <button class="header-search_btn" type="submit"><i
                                         class="ion-ios-search-strong"><span>Search</span></i></button>
                                 </form>
+
+                                <!-- Search End Here -->
+
                             </div>
                         </div>
+                        <!-- Search Div End Here -->
+
                         <div class="col-lg-4 col-md-9 col-sm-7">
                             <div class="header-right_area">
                                 <ul>
@@ -184,7 +195,7 @@
                                                 </li>
                                             </ul>
                                         </li>
-                                        <li><a href="javascript:void(0)">Specials</a></li>
+                                        <li><a href="{% url 'user_side:product_list' %}">Products</a></li>
                                         <li class=""><a href="javascript:void(0)">Pages <i
                                                 class="ion-ios-arrow-down"></i></a>
                                             <ul class="hm-dropdown">
@@ -249,7 +260,7 @@
 
                                         <!-- My Account Area Start Here -->
 
-                                        <li><a href="{% url 'user_profile' %}"><span class="fa fa-user"></span> <span>My Account</span><i class="fa fa-chevron-down"></i></a>
+                                        <li><a href="{% url 'user_profile:user_profile' %}"><span class="fa fa-user"></span> <span>My Account</span><i class="fa fa-chevron-down"></i></a>
                                             <ul class="ht-dropdown ht-my_account">
                                                 {% if user.is_authenticated %}
                                                 <li><a href="{% url 'logout_view'%}">Logout</a></li>
