--- a/sportsio/templates/user_side/base.html
+++ b/sportsio/templates/user_side/base.html
@@ -92,21 +92,17 @@
                                             <i class="ion-navicon"></i>
                                         </a>
                                     </li>
+                                    <a href="{% url 'user_profile:cart_view' %}" class="minicart-btn toolbar-btn">
                                     <li class="minicart-wrap">
-                                        <a href="#miniCart" class="minicart-btn toolbar-btn">
+                                        
                                             <div class="minicart-count_area">
-                                                <span class="item-count">3</span>
+                                                <span class="item-count">4</span>
                                                 <i class="ion-bag"></i>
                                             </div>
-                                            <div class="minicart-front_text">
-                                                <span>Cart:</span>
-                                                <span class="total-price">462.4</span>
-                                            </div>
                                         </a>
+                                        
                                     </li>
-                                    <li class="contact-us_wrap">
-                                        <a href="tel://+123123321345"><i class="ion-android-call"></i>+123 321 345</a>
-                                    </li>
+                                   
                                 </ul>
                             </div>
                         </div>
@@ -202,7 +198,7 @@
                                                 <li><a href="my-account.html">My Account</a></li>
                                                 <li><a href="login-register.html">Login | Register</a></li>
                                                 <li><a href="wishlist.html">Wishlist</a></li>
-                                                <li><a href="cart.html">Cart</a></li>
+                                                <li><a href="{% url 'user_profile:cart_view'%}">Crt</a></li>
                                                 <li><a href="checkout.html">Checkout</a></li>
                                                 <li><a href="compare.html">Compare</a></li>
                                                 <li><a href="faq.html">FAQ</a></li>
@@ -434,7 +430,7 @@
                                                 <li><a href="my-account.html">My Account</a></li>
                                                 <li><a href="login-register.html">Login | Register</a></li>
                                                 <li><a href="wishlist.html">Wishlist</a></li>
-                                                <li><a href="cart.html">Cart</a></li>
+                                                <li><a href="{% url 'user_profile:cart_view'%}">Cart</a></li>
                                                 <li><a href="checkout.html">Checkout</a></li>
                                                 <li><a href="compare.html">Compare</a></li>
                                                 <li><a href="faq.html">FAQ</a></li>
